# Deep-Learning-Project

./: .gitignore  Introduzione_cnn_pytorch_empty.ipynb  README.md  introduzione_cnn_pytorch.ipynb  main.py  pyproject.toml
config/: configs.yaml
data/: processing_data.py
model/: cnn.py
models/: cnn.py
predict/: inference.py
train/: trained.py  training.py
utils/: io.py  seed.py
